# SolangParse4Debugging

./: Cargo.toml  README.md
.github/workflows/: run_solang_parser.yml
bash/: run_on_repo.sh
nightlies/: 2023-10-06.md  current.md
nightlies/json/: 2023-10-06.json  2023-10-07.json  2023-11-01.json  2023-11-18.json  2023-12-16.json  2024-01-19.json  2024-01-27.json  2024-02-02.json  2024-02-05.json  2024-02-12.json  2024-02-14.json  2024-02-25.json  2024-03-01.json  2024-03-07.json  2024-03-10.json  2024-03-19.json  2024-03-23.json  2024-03-29.json  2024-04-04.json  2024-04-05.json  2024-04-15.json  2024-05-05.json  2024-05-30.json  2024-06-06.json  2024-06-18.json  2024-07-11.json  2024-07-22.json  2024-07-23.json  2024-07-31.json  2024-09-18.json  2024-09-21.json  2024-10-08.json  2024-10-13.json  2024-10-16.json  2024-10-22.json  2024-10-25.json  2024-12-08.json  2024-12-20.json  2025-01-06.json  2025-01-13.json  (+1 more)
nightlies/markdown/: 2023-10-06.md  2023-10-07.md  2023-10-21.md  2023-11-10.md  2023-12-20.md  2024-01-19.md  2024-01-25.md  2024-02-02.md  2024-02-03.md  2024-02-07.md  2024-02-14.md  2024-02-28.md  2024-03-01.md  2024-03-07.md  2024-03-08.md  2024-03-20.md  2024-03-21.md  2024-03-28.md  2024-04-04.md  2024-04-05.md  2024-04-06.md  2024-04-27.md  2024-05-28.md  2024-06-01.md  2024-06-12.md  2024-07-15.md  2024-07-17.md  2024-07-23.md  2024-07-24.md  2024-08-10.md  2024-09-21.md  2024-09-30.md  2024-10-09.md  2024-10-18.md  2024-10-23.md  2024-10-25.md  2024-10-26.md  2024-12-20.md  2025-01-09.md  2025-01-27.md  (+1 more)
python/: combine_jsons.py  run_on_hardhat.py
src/: main.rs
testcase/address_code/: AddressCode.sol
(+16 files in other folders)
