[package]
name = "solang_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "4.0.29", features = [
    "derive",
] }
clap_complete = "4.0.6"
solang = { git = "https://github.com/hyperledger/solang.git", rev = "d6f73d3fdb349204097fff63338cf4d89e301b4b", default-features = false }
solang-parser = { git = "https://github.com/hyperledger/solang.git", rev = "d6f73d3fdb349204097fff63338cf4d89e301b4b" }
